Bug 1628770 - Restrict "empty editable block" bits to contenteditable roots. r=jfkthame

This is what other UAs do.

Differential Revision: https://phabricator.services.mozilla.com/D70423

--HG--
extra : moz-landing-system : lando